hphp/hack/test/typecheck/ban_bool_cast/ban_bool_cast.php
<?hh

function test(mixed $x): void {
  $_ = (bool) $x;
  $_ = (int) $x;
  $_ = (string) $x;
}
